--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "FMInsideReplace",
-  "version": "1.0",
-  "description": "Replaces FMInside 1-100 values with original 1-20 values",
+  "version": "1.1",
+  "description": "Replaces FMInside 1-100 values with original 1-20 values and rearranges to the typical FM format",
   "permissions": [],
   "content_scripts": [
     {
